--- a/MSU/msuHomePage.html
+++ b/MSU/msuHomePage.html
@@ -4,6 +4,7 @@
       <title>The Maharaja Sayajrao University of Baroda</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.png">
       <link rel="stylesheet" href="./CDN/bootstrap.min.css" crossorigin="anonymous">
       <link rel="stylesheet" href="style.css">
       <script src="./CDN/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
